ft_containers-unit-test/logs.txt
../vector_tests/insert(std iterators).cpp:28:9: error: no matching member function for call to 'insert'
        vector.insert(vector.begin(), tmp.begin(), tmp.end());
        ~~~~~~~^~~~~~
../vector_tests/insert(std iterators).cpp:40:75: note: in instantiation of function template specialization 'insert_std_test<int>' requested here
        exit(run_vector_unit_test<int>("insert(std iterators)", insert_std_test, insert_std_test));
                                                                                 ^
../vector_tests/../../../vector.hpp:712:8: note: candidate function not viable: no known conversion from 'std::vector<int>::iterator' (aka '__normal_iterator<int *, std::vector<int, std::allocator<int>>>') to 'ft::vector::size_type' (aka 'unsigned long') for 2nd argument
  void insert (iterator position, size_type n, const value_type& val)
       ^
../vector_tests/../../../vector.hpp:645:11: note: candidate function not viable: requires 2 arguments, but 3 were provided
        iterator insert(iterator position, const value_type &val)
                 ^
1 error generated.
                                                    ^
../vector_tests/../../../vector.hpp:712:8: note: candidate function not viable: no known conversion from 'ft::vector<int>::iterator' (aka 'int *') to 'ft::vector::size_type' (aka 'unsigned long') for 2nd argument; dereference the argument with *
  void insert (iterator position, size_type n, const value_type& val)
       ^
../vector_tests/../../../vector.hpp:645:11: note: candidate function not viable: requires 2 arguments, but 3 were provided
        iterator insert(iterator position, const value_type &val)
                 ^
2 errors generated.
rhs)
        ^
1 error generated.
